--- a/nginx/files/static.conf
+++ b/nginx/files/static.conf
@@ -3,7 +3,9 @@
 server {
 
   {%- include "nginx/files/_name.conf" %}
+
   {%- include "nginx/files/_log.conf" %}
+
   {%- include "nginx/files/_ssl.conf" %}
 
   location / {
@@ -52,6 +54,11 @@ server {
 
     {%- include "nginx/files/_auth.conf" %}
 
+    {%- if site.php is defined %}
+      {%- if site.php.get('enabled', False) %}
+        {%- include "nginx/files/_php.conf" %}
+      {%- endif %}
+    {%- endif %}
   }
 
 }
