--- a/nginx/files/_name.conf
+++ b/nginx/files/_name.conf
@@ -1,4 +1,9 @@
-
-  listen {% if site.host.address is defined %}{{ site.host.address }}:{% endif %}{% if site.host.port is defined %}{{ site.host.port }}{% elif site.get('ssl', {'enabled': False}).get('enabled', False) %}443 ssl{% else %}80{% endif %};
+  {% if site.host.address is defined %}
+  listen {{ site.host.address }}:{% endif %}{% if site.host.port is defined %}{{ site.host.port }};
+  {% endif %}
+  {% if site.get('ssl', {'enabled': False}).get('enabled', False) %}
+  listen 443 ssl;
+  listen 80;
+  {% endif %}
 
   server_name {{ site.host.name }}{%- if site.host.aliases is defined %} {{ site.host.aliases|join(' ') }}{%- endif %};
