--- a/nginx/files/redirect.conf
+++ b/nginx/files/redirect.conf
@@ -1,11 +1,11 @@
 {%- set site = salt['pillar.get']('nginx:server:site:'+site_name) %}
 
 server {
-  listen {{ site.host.get("port", 80) }};
+  listen {{ site.host.get("port", 80) }} {%- if site.host.default_server is defined and site.host.default_server %}default_server{%- endif %};
   server_name {{ site.host.name }}{%- if site.host.aliases is defined %} {{ site.host.aliases|join(' ') }}{%- endif %};
   {%- if site.redirect is defined %}
   rewrite ^(.*)   {{ site.redirect.get('protocol', 'http') }}://{{ site.redirect.get('host', '$server_name') }}{{ site.redirect.get('path', '$1') }} permanent;
   {%- else %}
-  rewrite ^(.*)   https://$server_name$1 permanent;
+  return 301 https://$host$request_uri;
   {%- endif %}
 }
