--- a/nginx/files/_name.conf
+++ b/nginx/files/_name.conf
@@ -3,7 +3,8 @@
   {% endif %}
   {% if site.get('ssl', {'enabled': False}).get('enabled', False) %}
   listen 443 ssl;
-  listen 80;
   {% endif %}
 
-  server_name {{ site.host.name }}{%- if site.host.aliases is defined %} {{ site.host.aliases|join(' ') }}{%- endif %};
+  {%- if site.host.aliases is defined %}
+  server_name {{ site.host.aliases|join(' ') }};
+  {%- endif %}
