--- a/nginx/files/nginx.conf
+++ b/nginx/files/nginx.conf
@@ -1,4 +1,7 @@
 {%- from "nginx/map.jinja" import server with context -%}
+# this file is managed by salt
+# DO NOT EDIT
+
 user {{ server.system_user }};
 worker_processes {{ server.get('worker', {}).get('processes', 'auto') }};
 worker_rlimit_nofile {{ server.get('worker', {}).get('limit', {}).get('nofile', '20000') }};
