--- a/nginx/files/proxy.conf
+++ b/nginx/files/proxy.conf
@@ -8,6 +8,7 @@ server {
 
   {%- include "nginx/files/_name.conf" %}
   {%- include "nginx/files/_ssl.conf" %}
+  {%- include "nginx/files/_log.conf" %}
 
   {%- if site.get('underscores_in_headers', False) %}
   underscores_in_headers on;
