--- a/nginx/files/static.conf
+++ b/nginx/files/static.conf
@@ -1,6 +1,14 @@
 {%- set site = salt['pillar.get']('nginx:server:site:'+site_name) %}
 
 server {
+  server_name {{ site.host.name }};
+
+  {%- include "nginx/files/_ssl.conf" %}
+
+  return 301 https://www.{{ site.host.name }}$request_uri;
+}
+
+server {
 
   {%- include "nginx/files/_name.conf" %}
 
@@ -54,8 +62,8 @@ server {
 
     {%- include "nginx/files/_auth.conf" %}
 
-    {%- if site.php is defined %}
-      {%- if site.php.get('enabled', False) %}
+    {%- if site.engine is defined %}
+      {%- if site.engine == 'php' %}
         {%- include "nginx/files/_php.conf" %}
       {%- endif %}
     {%- endif %}
