--- a/nginx/files/_name.conf
+++ b/nginx/files/_name.conf
@@ -5,6 +5,4 @@
   listen 443 ssl;
   {% endif %}
 
-  {%- if site.host.aliases is defined %}
-  server_name {{ site.host.aliases|join(' ') }};
-  {%- endif %}
+  server_name {%- if not site.get('use_www', False) %} {{ site.host.name }}{%- endif %}{%- if site.host.aliases is defined %} {{ site.host.aliases|join(' ') }};{%- endif %}
