--- a/nginx/files/proxy.conf
+++ b/nginx/files/proxy.conf
@@ -4,6 +4,10 @@
 
 {%- from "nginx/files/headers/_strict_transport_security.conf" import strict_transport_security %}
 
+{%- if site.get('use_www', False) %}
+{%- include "nginx/files/_www.conf" %}
+{%- endif %}
+
 server {
 
   {%- include "nginx/files/_name.conf" %}
