--- a/nginx/files/static.conf
+++ b/nginx/files/static.conf
@@ -1,12 +1,8 @@
 {%- set site = salt['pillar.get']('nginx:server:site:'+site_name) %}
 
-server {
-  server_name {{ site.host.name }};
-
-  {%- include "nginx/files/_ssl.conf" %}
-
-  return 301 https://www.{{ site.host.name }}$request_uri;
-}
+{%- if site.get('use_www', False) %}
+{%- include "nginx/files/_www.conf" %}
+{%- endif %}
 
 server {
 
